# Team-9-Technology-Template-Repository

./: .coveragerc  .gitignore  README.md  component.md  nose2.cfg  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
src/: logger.py  main.py  notifier.py
src/calculator/: __init__.py  calculator.py  pyproject.toml  test_calculator.py
src/calculator/test/: test_calculator.py
src/logger/: __init__.py  pyproject.toml  test_logger.py
src/logger/test/: test_logger.py
src/notifier/: __init__.py  notifier.py  pyproject.toml
src/notifier/test/: test_notifier.py
test-results/: calculator_unit.xml
tests/e2e/: e2e.py  test_e2e.py
tests/integration/: test_calculator_logger.py  test_logger_notifier.py
tests/unit/: test_calculator.py  test_logger.py  test_main.py  test_notifier.py
